# lambix

./: .gitmodules  Cargo.toml  Makefile  i686-unknown-lambix.json  run  run.sh  rust-toolchain.toml  x86_64-unknown-lambix.json
.cargo/: config.toml
arch/amd64/: Cargo.toml
arch/amd64/src/: apic.rs  cpuid.rs  descriptors.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  multiboot2.rs  paging.rs  serial_print.rs
arch/amd64_interrupts/: Cargo.toml
arch/amd64_interrupts/src/: handler_macros.rs  idt.rs  lib.rs
bootloader/: Cargo.toml  build.rs  linker.ld
bootloader/src/: bootstrap.rs  gdt.rs  identity_paging.rs  idt.rs  kernel_loader.rs  lib.rs  main.rs  multiboot.rs  multiboot2.rs  paging.rs  panic.rs  serial_print.rs
bootloader_types/: Cargo.toml
bootloader_types/src/: lib.rs  multiboot2.rs
build_utils/: Cargo.toml
build_utils/src/: lib.rs
builtins_shared/: Cargo.toml
builtins_shared/src/: lib.rs
compiler/: rust.config.toml
kernel/: Cargo.toml  build.rs
kernel/src/: early_println.rs  main.rs  paging.rs
kernel_mm/: Cargo.toml
kernel_mm/src/: lib.rs
packaging/grub/: grub.cfg
tool_lambemu/: Cargo.toml
tool_lambemu/src/: main.rs
